creusot/tests/should_fail/prusti/calls/give_static.stderr
error[creusot]: invalid mut dereference of zombie expression with lifetime `'static` in state `'curr`
  --> give_static.rs:11:12
   |
11 | #[ensures(*old(give_static()) == 42u32)]
   |            ^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

